# serde-bebop

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yaml
src/: de.rs  error.rs  lib.rs  ser.rs
