[package]
name = "serde_bebop"
version = "0.1.0"
authors = ["Taylor Thomas <taylor.thomas@microsoft.com>"]
edition = "2018"
license-file = "LICENSE"
description = "A Serde implementation for the Bebop protocol"
repository = "https://github.com/thomastaylor312/bebop"
readme = "README.md"
keywords = [
    "serialization",
    "deserialization",
    "bebop",
    "serde"
]
exclude = [
    ".github/*",
    ".gitignore"
]

[dependencies]
serde = "1.0"
thiserror = "1.0"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
